# basic-LLVM-passes

./: .gitignore  CMakeLists.txt  ReadMe.md  run-all.sh  run-passes.sh
include/: Passes.hpp
src/: AllOpsProfilePass.cpp  FunctionCallsProfilePass.cpp  FunctionInfoPass.cpp  MemoryOpCountPass.cpp  RemoveTheUnreachablePass.cpp  RemoveUnreacheablesPass.cpp  ReplaceMultiplyPass.cpp  ReplaceSubtractPass.cpp  WrongOpReplacePass.cpp
test/: CMakeLists.txt  dummy_test  lit.cfg.py  lit.site.cfg.py.in
test-codes/: sample_source_code.cpp  sample_source_code_plus.cpp
test/sample-test/: lit.local.cfg  sample_source_code.cpp
tmp/: sample.ll  sample.s
